[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "C2_Treatment_nonmaleficence_valuator"
version = "1.0.2"
description = "C2 component that calculate the nonmaleficence value of a treatment."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0"
license-files = [ "LICENSE"]
keywords = ["VALAWAI", "C2", "nonmaleficence"]
authors = [{ name = "IIIA-CSIC"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.10"
]
dependencies = [
	"pika>=1.3.2",
	"pydantic >= 2.11.4"
	]

[project.urls]
"Documentation" = "https://valawai.github.io/docs/components/C2/treatment_nonmaleficence_valuator"
"Changelog" = "https://github.com/VALAWAI/C2_treatment_nonmaleficence_valuator/blob/main/CHANGELOG.md"
"Source" = "https://github.com/VALAWAI/C2_treatment_nonmaleficence_valuator/tree/main"

[tool.hatch.version]
path = "c2_treatment_nonmaleficence_valuator/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/c2_treatment_nonmaleficence_valuator",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
	]
	
[tool.hatch.envs.test]
dependencies = [
	"pytest>=8.3.5",
	"coverage>=7.8.0"
	]
	
[tool.hatch.envs.hatch-test]
extra-dependencies = [
	"requests>=2.32.3",
	"unittest-parametrize>=1.6.0"
	]
	
[tool.coverage.run]
omit = [
    "tests/*"
	]

[tool.coverage.report]
show_missing = true
